fix pinch gestures on mobile

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
       <title>mplace</title>
       <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   </head>
-  <body class="w-dvw h-dvh m-0 p-0 overflow-clip">
+  <body class="w-dvw h-dvh m-0 p-0 overflow-clip touch-none">
     <!-- Greeter -->
     <section id="greeter" class="absolute top-0 left-0 w-full h-full bg-black
                  z-40 flex items-center justify-center select-none">
