add zoom widget

--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
                     mplace v<span data-role="version">UNKNOWN</span>
                 </p>
             </div>
+            <!-- Zoom -->
+            <div id="zoom" class="absolute top-0 left-0 p-2 font-ubuntu pointer-events-auto">
+                <div class="bg-white drop-shadow-md rounded-full text-md p-2 pt-4 pb-4 flex flex-col select-none">
+                    <span data-role="plus" class="font-bold cursor-pointer text-center scale-175 origin-bottom">+</span>
+                    <span data-role="level" class="text-center font-jb translate-y-1/8">0.0</span>
+                    <span data-role="minus" class="font-bold cursor-pointer text-center scale-175 origin-top">-</span>
+                </div>
+            </div>
         </section>
         <!-- Modals -->
         <section id="modals" class="absolute top-0 left-0 w-full h-full z-10 flex items-center justify-center pointer-events-auto">
