clean up binding logic

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div id="stats" class="absolute bottom-0 right-0 p-2 pointer-events-auto">
                 <div class="bg-white drop-shadow-md rounded-full text-sm p-2 overflow-clip">
                     <span data-role="coords" class="font-jb select-none">0 N 0 E</span>
-                    <button data-role="copy-coords" class="ml-1 h-4 bg-none border-none p-0 relative cursor-pointer scale-200">
+                    <button data-role="copyCoords" class="ml-1 h-4 bg-none border-none p-0 relative cursor-pointer scale-200">
                         <img src="/images/icons/copy.svg" alt="Copy" title="Copy"
                              class="cursor-pointer h-full align-bottom scale-50">
                     </button>
